# rtk

./: CITATION.md  CMakeLists.txt  LICENSE  README.md
cmake/: rtk-config.cmake.in
include/rtk/: constants.ipp  rtk.hpp
include/rtk/core/: core.hpp  math.hpp  projection.hpp  types.hpp  vertices.hpp
include/rtk/dif/: dcf.hpp  dif.hpp  sdcf.hpp  utils.hpp
include/rtk/measures/d2/: utils.hpp
include/rtk/measures/d3/: utils.hpp
include/rtk/model/: fif.hpp  model.hpp  pifs.hpp
include/rtk/prelude/: prelude.hpp  types.hpp
include/rtk/util/: assert.hpp  exporter.hpp  log.hpp  util.hpp
scripts/: build.sh  install.sh  test.sh
sources/rtk/model/: pifs.cpp
tests/: CMakeLists.txt
tests/barycentric/: CMakeLists.txt
tests/barycentric/sources/: main.cpp
tests/dcf/: CMakeLists.txt
tests/dcf/sources/: main.cpp
tests/exporter/: CMakeLists.txt
tests/exporter/sources/: main.cpp
tests/fif/: CMakeLists.txt
tests/fif/sources/: main.cpp
tests/hello-world/: CMakeLists.txt
tests/hello-world/sources/: main.cpp
tests/pifs/: CMakeLists.txt
tests/pifs/sources/: main.cpp
tests/vertices/: CMakeLists.txt
tests/vertices/sources/: main.cpp
